# mcp-content-pipeline

./: CHANGELOG.md  pyproject.toml
src/mcp_content_pipeline/: __init__.py
src/mcp_content_pipeline/services/: claude_client.py  github_client.py  transcript.py
tests/: test_claude_client.py  test_sync_to_github.py  test_transcript_service.py
